--- a/app/src/main/res/layout/dialog_editNum.xml
+++ b/app/src/main/res/layout/dialog_editNum.xml
@@ -21,13 +21,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
-            android:text="@string/bingoRange_title"
+            android:text="@string/bingoNum_title"
             android:textColor="#ffffffff"
             android:textSize="25sp" />
     </FrameLayout>
 
     <EditText
-        android:id="@+id/etRangeMin"
+        android:id="@+id/etNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
@@ -36,22 +36,9 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:focusable="true"
-        android:hint="@string/bingoRange_min"
+        android:hint="@string/bingoNum_hint"
         android:inputType="number"
         android:selectAllOnFocus="true"
         android:focusableInTouchMode="true" />
-
-    <EditText
-        android:id="@+id/etRangeMax"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="4dp"
-        android:ems="10"
-        android:hint="@string/bingoRange_max"
-        android:inputType="number"
-        android:selectAllOnFocus="true" />
 
 </LinearLayout>
