--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,16 +71,49 @@
             android:orientation="horizontal">
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/current"
+                android:id="@+id/textView5"
+                android:textSize="20sp" />
+
+            <TextView
                 android:id="@+id/tvLine"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nowLine"
+                android:textSize="20sp"
+                android:layout_marginRight="50dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/aims"
+                android:id="@+id/textView3"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tvAimsLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="20sp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nowLine"
+                android:id="@+id/textView4"
                 android:textSize="20sp" />
         </LinearLayout>
 
@@ -98,7 +131,7 @@
                 <TextView
                     android:id="@+id/tvNum0"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
@@ -109,7 +142,7 @@
                 <TextView
                     android:id="@+id/tvNum1"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
@@ -120,7 +153,7 @@
                 <TextView
                     android:id="@+id/tvNum2"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
@@ -137,7 +170,7 @@
                 <TextView
                     android:id="@+id/tvNum3"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
@@ -148,7 +181,7 @@
                 <TextView
                     android:id="@+id/tvNum4"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
@@ -159,7 +192,7 @@
                 <TextView
                     android:id="@+id/tvNum5"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
@@ -176,7 +209,7 @@
                 <TextView
                     android:id="@+id/tvNum6"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
@@ -187,7 +220,7 @@
                 <TextView
                     android:id="@+id/tvNum7"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
@@ -198,7 +231,7 @@
                 <TextView
                     android:id="@+id/tvNum8"
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/onPause"
                     android:gravity="center_vertical|center_horizontal"
